shellclear/src/snapshots/shellclear__config__test_config__can_delete_sensitive_patterns_file-3.snap
---
source: shellclear/src/config.rs
expression: config.delete_sensitive_patterns_file()
---
Ok(
    (),
)
