shellclear/src/snapshots/shellclear__config__test_config__can_delete_sensitive_patterns_file-4.snap
---
source: shellclear/src/config.rs
expression: "!config.sensitive_commands_path.exists()"
---
true
