shellclear/src/snapshots/shellclear__config__test_config__can_delete_sensitive_patterns_from_file-3.snap
---
source: shellclear/src/config.rs
expression: "!config.is_sensitive_pattern_file_exists()"
---
true
