shellclear/src/snapshots/shellclear__config__test_config__can_get_sensitive_pattern_name.snap
---
source: shellclear/src/config.rs
expression: "config.get_sensitive_pattern_name().replace(&temp_dir.path().to_str().unwrap(),\n        \"\").replace('\\\\', \"/\")"
---
"/app/shellclear/sensitive-patterns.yaml"
