shellclear/src/snapshots/shellclear__config__test_config__can_init-2.snap
---
source: shellclear/src/config.rs
expression: "fs::read_to_string(path.unwrap()).unwrap() == SENSITIVE_PATTERN_TEMPLATE"
---
true
