shellclear/src/snapshots/shellclear__config__test_config__can_init-3.snap
---
source: shellclear/src/config.rs
expression: "fs::read_to_string(config.ignore_sensitive_path).unwrap() ==\n    IGNORES_SENSITIVE_PATTERN_TEMPLATE"
---
true
