shellclear/src/snapshots/shellclear__config__test_config__can_is_sensitive_pattern_file_exists.snap
---
source: shellclear/src/config.rs
expression: config.is_sensitive_pattern_file_exists()
---
false
