shellclear/src/snapshots/shellclear__config__test_config__can_load_patterns_from_default_path.snap
---
source: shellclear/src/config.rs
expression: config.load_patterns_from_default_path()
---
Ok(
    [
        SensitiveCommands {
            test: <PATTERN REGEX>,
            name: "Pattern Name",
        },
    ],
)
